@@ -145,7 +145,7 @@
     </target>
     
     <target name="test" depends="test.compile" description="-- run regression (30 seconds per test)">
-        <junit printsummary="yes" maxmemory="10G">
+        <junit printsummary="yes" maxmemory="16G">
             <jvmarg value="-Dtest.idStart=0"/>
             <jvmarg value="-Dtest.idCount=500000"/>
             <jvmarg value="-Dtest.segFileSizeMB=128"/>
@@ -239,7 +239,7 @@
     <target name="test.quick" description="-- run a quick test on DataCache" depends="test.compile">
         <junit printsummary="yes" maxmemory="4G">
             <jvmarg value="-Dtest.idStart=0"/>
-            <jvmarg value="-Dtest.idCount=200000"/>
+            <jvmarg value="-Dtest.idCount=500000"/>
             <jvmarg value="-Dtest.segFileSizeMB=100"/>
             <jvmarg value="-Dtest.runTimeSeconds=60"/>
             <jvmarg value="-Dtest.dir=${test.dir}"/>
@@ -263,9 +263,34 @@
         <junit printsummary="yes" maxmemory="4G">
             <jvmarg value="-Xprof"/>
             <jvmarg value="-Dtest.idStart=0"/>
-            <jvmarg value="-Dtest.idCount=200000"/>
+            <jvmarg value="-Dtest.idCount=500000"/>
             <jvmarg value="-Dtest.segFileSizeMB=100"/>
             <jvmarg value="-Dtest.runTimeSeconds=300"/>
+            <jvmarg value="-Dtest.dir=${test.dir}"/>
+            <jvmarg value="-Dtest.output.dir=${test.dir}/output"/>
+            <formatter type="brief" usefile="false"/>
+            
+            <classpath>
+                <path refid="test.class.path"/>
+                <path refid="java.class.path"/>
+                <path refid="compile.class.path"/>
+                <path refid="test.compile.class.path"/>
+            </classpath>
+            
+            <batchtest fork="yes">
+                <fileset dir="${test.build.dir}" includes="**/TestDataCache.class"/>
+            </batchtest>
+        </junit>
+    </target>
+
+    <target name="test.Xloggc" description="-- run test with -Xloggc (5 hours)" depends="test.compile">
+        <junit printsummary="yes" maxmemory="16G">
+            <jvmarg value="-Xloggc:${logs.dir}/krati.gc"/>
+            <jvmarg value="-XX:+PrintGCDetails"/>
+            <jvmarg value="-Dtest.idStart=0"/>
+            <jvmarg value="-Dtest.idCount=5000000"/>
+            <jvmarg value="-Dtest.segFileSizeMB=256"/>
+            <jvmarg value="-Dtest.runTimeSeconds=18000"/>
             <jvmarg value="-Dtest.dir=${test.dir}"/>
             <jvmarg value="-Dtest.output.dir=${test.dir}/output"/>
             <formatter type="brief" usefile="false"/>
